service para modal e FormGroup no template

--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -18,6 +18,7 @@
     </p>
     <p
       class="font-semibold text-xs text-[#2A89EF] underline underline-offset-2 cursor-pointer ml-auto"
+      (click)="openEditTaskModal()"
     >
       Editar
     </p>
