--- a/src/app/components/task-comments-modal/task-comments-modal.component.html
+++ b/src/app/components/task-comments-modal/task-comments-modal.component.html
@@ -22,13 +22,19 @@
             class="rounded-lg border border-[#D1D5DB] p-3 bg-white flex-1 text-sm font-light"
             type="text"
             placeholder="Adicione um comentário"
+            [formControl]="commentControl"
           />
-          <p class="font-semibold text-sm text-red-500">
-            O campo é obrigatório.
-          </p>
         </div>
         <button
-          class="py-3 px-4 bg-[#2A89EF] text-white rounded-xl text-sm font-semibold cursor-pointer active:translate-y-1 transition-transform duration-75 shadow-md shadow-blue-500/50"
+          class="{{ 
+          `py-3 px-4 rounded-xl text-sm font-semibold text-white cursor-pointer
+          ${ commentControl.invalid 
+            ? 'bg-[#D7D8D8]'
+            : 'bg-[#2A89EF] active:translate-y-1 transition-transform duration-75 shadow-md shadow-blue-500/50'
+          } 
+          `}}"
+          [disabled]="commentControl.invalid"
+          (click)="onAddComment()"
         >
           Adicionar
         </button>
@@ -36,54 +42,29 @@
       <div
         class="flex flex-col gap-5 overflow-scroll max-h-44 scrollbar-hidden"
       >
-        <!-- Comentário -->
-        <div class="flex flex-col gap-3 border-b border-[#D1D5DB]">
-          <div>
-            <p class="font-light text-sm text-[#374151]">Já finalizei</p>
+        @for (comment of _task.comments; track comment.id; let last = $last) {
+          <!-- Comentário -->
+          <div
+            class="{{ `flex flex-col gap-3 ${ !last ? 'border-b border-[#D1D5DB]' : '' }` }}"
+          >
+            <div>
+              <p class="font-light text-sm text-[#374151]">
+                {{ comment.description }}
+              </p>
+            </div>
+            <div class=" {{ `flex gap-4 $ { !last ? 'mb-3' : ''}` }}">
+              <p class="font-normal text-xs text-[#9CA3AF]">
+                Comentado há 10 min atrás
+              </p>
+              <p
+                class="font-semibold text-xs underline underline-offset-2 cursor-pointer"
+              >
+                Apagar
+              </p>
+            </div>
           </div>
-          <div class="flex gap-4 mb-3">
-            <p class="font-normal text-xs text-[#9CA3AF]">
-              Comentado há 10 min atrás
-            </p>
-            <p
-              class="font-semibold text-xs underline underline-offset-2 cursor-pointer"
-            >
-              Apagar
-            </p>
-          </div>
-        </div>
-        <!-- Comentário -->
-        <div class="flex flex-col gap-3 border-b border-[#D1D5DB]">
-          <div>
-            <p class="font-light text-sm text-[#374151]">Já finalizei</p>
-          </div>
-          <div class="flex gap-4 mb-3">
-            <p class="font-normal text-xs text-[#9CA3AF]">
-              Comentado há 10 min atrás
-            </p>
-            <p
-              class="font-semibold text-xs underline underline-offset-2 cursor-pointer"
-            >
-              Apagar
-            </p>
-          </div>
-        </div>
-        <!-- Comentário -->
-        <div class="flex flex-col gap-3">
-          <div>
-            <p class="font-light text-sm text-[#374151]">Já finalizei</p>
-          </div>
-          <div class="flex gap-4 mb-3">
-            <p class="font-normal text-xs text-[#9CA3AF]">
-              Comentado há 10 min atrás
-            </p>
-            <p
-              class="font-semibold text-xs underline underline-offset-2 cursor-pointer"
-            >
-              Apagar
-            </p>
-          </div>
-        </div>
+          <!-- End Comentário -->
+        }
       </div>
     </div>
   </div>
