Update taskcomment e deleteTask

--- a/src/app/components/task-list-section/task-list-section.component.html
+++ b/src/app/components/task-list-section/task-list-section.component.html
@@ -4,9 +4,9 @@
 
 @let noTasksCreated = todoTasks.length === 0 && doingTasks.length === 0 && doneTasks.length === 0;
 
-<p>TODO: {{ todoTasks | json}} </p>
-<p>DOING: {{ doingTasks | json }} </p>
-<p>DONE: {{ doneTasks | json}} </p>
+<p>TODO: {{ this._taskService.todoTasks | async | json}} </p>
+<p>DOING: {{ this._taskService.doingTasks | async }} </p>
+<p>DONE: {{ this._taskService.doneTasks | async }} </p>
 
 <div class="flex overflow-x-auto scrollbar-hidden">
   <!-- Coluna a fazer-->
