--- a/src/app/components/task-comments-modal/task-comments-modal.component.html
+++ b/src/app/components/task-comments-modal/task-comments-modal.component.html
@@ -2,13 +2,17 @@
   <div class="p-4 flex gap-1">
     <img src="images/icon-task-star.svg" />
     <h1 class="font-semibold text-lg">Comentar tarefa</h1>
-    <img class="ml-auto cursor-pointer" src="images/icon-close.svg" />
+    <img
+      class="ml-auto cursor-pointer"
+      src="images/icon-close.svg"
+      (click)="onCloseModal()"
+    />
   </div>
   <div class="p-4 border-t border-[#D1D5DB]">
-    <h1 class="font-semibold text-lg mb-4">Minha nova tarefa</h1>
+    <h1 class="font-semibold text-lg mb-4">{{ _task.name }}</h1>
     <p class="font-semibold text-sm mb-2">Descrição</p>
     <p class="font-normal text-base text-[#374151]">
-      Essa é a minha tarefa para crair um projeto Angular
+      {{ _task.description }}
     </p>
   </div>
   <div class="p-4">
@@ -19,6 +23,7 @@
       <div class="flex items-start gap-2">
         <div class="flex flex-col w-full">
           <input
+            #commentInput
             class="rounded-lg border border-[#D1D5DB] p-3 bg-white flex-1 text-sm font-light"
             type="text"
             placeholder="Adicione um comentário"
@@ -58,6 +63,7 @@
               </p>
               <p
                 class="font-semibold text-xs underline underline-offset-2 cursor-pointer"
+                (click)="onRemoveComment(comment.id)"
               >
                 Apagar
               </p>
